Add realm, login, feed page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">MemberID</string>
+    <string name="award">AWARD</string>
+    <string name="enter_email">Enter your email address to sign in and continue</string>
+    <string name="email_address">Email Address</string>
+    <string name="sign_in">Sign In</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="gift_card">Gift Card IDR 1.000.000</string>
+    <string name="card">Cards</string>
+    <string name="profile">Profile</string>
+    <string name="logout">Logout</string>
+    <string name="navigation_drawer_open">Open Drawer</string>
+    <string name="navigation_drawer_close">Close Drawer</string>
 </resources>
